<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/countdown_timer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text1"
    app:layout_constraintVertical_bias="1.0"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtdays"
            android:textColor="@color/LighterGrayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textColor="@color/LightGrayText"
            android:textAlignment="center"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layhours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txthours"
            android:textColor="@color/LighterGrayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textColor="@color/LightGrayText"
            android:textAlignment="center"
            android:textSize="17sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/laymin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtminutes"
            android:textColor="@color/LighterGrayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textColor="@color/LightGrayText"
            android:textAlignment="center"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/laysec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtseconds"
            android:textColor="@color/LighterGrayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:textColor="@color/LightGrayText"
            android:textAlignment="center"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>