<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:fitsSystemWindows="true"
    tools:context=".Schedule">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingTop="10dp"
                    android:text="@string/day1"
                    android:textColor="@color/LightGrayText"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="14dp"
                    android:text="@string/date1"
                    android:textSize="18sp"
                    android:textColor="@color/White" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/scheduleList1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/colorPrimaryLight"
                    android:dividerHeight="1dp"
                    android:padding="10dp"
                    android:scrollbars="none" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingTop="10dp"
                    android:text="@string/day2"
                    android:textColor="@color/LightGrayText"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="14dp"
                    android:textSize="18sp"
                    android:text="@string/date2"
                    android:textColor="@color/White" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/scheduleList2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/colorPrimaryLight"
                    android:dividerHeight="1dp"
                    android:padding="10dp"
                    android:scrollbars="none" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_drawer_layout"
        android:layout_width="@dimen/NavigationDrawerWidth"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_drawer_selector_color"
        app:itemTextColor="@drawable/nav_drawer_selector_color"
        app:itemBackground="@drawable/nav_drawer_selectorbg_color"
        android:theme="@style/NavigationGroupItemTitle"
        app:headerLayout="@layout/nav_draw_header"
        app:menu="@menu/nav_drawer"/>


</androidx.drawerlayout.widget.DrawerLayout>